RESOLVED FIXED142662
Elements with backdrop-filter cannot be clipped with clip-path or mask
https://bugs.webkit.org/show_bug.cgi?id=142662
Summary Elements with backdrop-filter cannot be clipped with clip-path or mask
Jer Noble
Reported 2015-03-13 01:00:15 PDT
Elements with a backdrop-filter cannot be clipped with border-radius, clip-path, clip, or mask.
Attachments
backdrop-blur-clip-path testcase (1.11 KB, text/html)
2015-03-13 01:01 PDT, Jer Noble
no flags
Patch (5.95 KB, patch)
2016-05-18 04:56 PDT, Antoine Quint
no flags
Archive of layout-test-results from ews103 for mac-yosemite (1021.45 KB, application/zip)
2016-05-18 05:22 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (1.03 MB, application/zip)
2016-05-18 05:24 PDT, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-yosemite (1.54 MB, application/zip)
2016-05-18 05:54 PDT, Build Bot
no flags
Patch (6.00 KB, patch)
2016-05-18 06:16 PDT, Antoine Quint
no flags
Patch (6.71 KB, patch)
2016-05-24 06:15 PDT, Antoine Quint
no flags
Patch (8.17 KB, patch)
2016-05-24 06:49 PDT, Antoine Quint
no flags
Archive of layout-test-results from ews101 for mac-yosemite (1.25 MB, application/zip)
2016-05-24 07:17 PDT, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-yosemite-wk2 (1.17 MB, application/zip)
2016-05-24 07:18 PDT, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-yosemite (1.55 MB, application/zip)
2016-05-24 07:47 PDT, Build Bot
no flags
Patch (53.33 KB, patch)
2016-05-24 12:04 PDT, Antoine Quint
no flags
Patch for landing (53.32 KB, patch)
2016-05-24 12:37 PDT, Antoine Quint
no flags
Archive of layout-test-results from webkit-cq-01 for mac-yosemite (1.04 MB, application/zip)
2016-05-24 13:12 PDT, WebKit Commit Bot
no flags
Patch (53.42 KB, patch)
2016-05-25 01:39 PDT, Antoine Quint
no flags
Patch for landing (53.42 KB, patch)
2016-05-25 02:19 PDT, Antoine Quint
no flags
Jer Noble
Comment 1 2015-03-13 01:01:07 PDT
Created attachment 248578 [details] backdrop-blur-clip-path testcase
Radar WebKit Bug Importer
Comment 2 2015-03-13 01:02:12 PDT
Antoine Quint
Comment 3 2016-05-18 04:56:34 PDT
Build Bot
Comment 4 2016-05-18 05:22:43 PDT
Comment on attachment 279233 [details] Patch Attachment 279233 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1342414 New failing tests: css3/filters/backdrop/backdrop-filter-with-clip-path.html
Build Bot
Comment 5 2016-05-18 05:22:51 PDT
Created attachment 279234 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-05-18 05:24:04 PDT
Comment on attachment 279233 [details] Patch Attachment 279233 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1342413 New failing tests: css3/filters/backdrop/backdrop-filter-with-clip-path.html
Build Bot
Comment 7 2016-05-18 05:24:08 PDT
Created attachment 279235 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 8 2016-05-18 05:54:18 PDT
Comment on attachment 279233 [details] Patch Attachment 279233 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1342486 New failing tests: css3/filters/backdrop/backdrop-filter-with-clip-path.html
Build Bot
Comment 9 2016-05-18 05:54:22 PDT
Created attachment 279236 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Antoine Quint
Comment 10 2016-05-18 06:16:13 PDT
Simon Fraser (smfr)
Comment 11 2016-05-18 09:36:54 PDT
Comment on attachment 279239 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279239&action=review > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:2456 > + hostLayerForSublayers()->setMask(maskCALayer); I think using primaryLayer() would be more appropriate. You also need to fix the code below to do the right thing for layer clones (test with -webkit-box-reflect on something with a backdrop; uknown if this works now).
Dean Jackson
Comment 12 2016-05-18 17:22:41 PDT
Comment on attachment 279239 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279239&action=review >> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:2456 >> + hostLayerForSublayers()->setMask(maskCALayer); > > I think using primaryLayer() would be more appropriate. > > You also need to fix the code below to do the right thing for layer clones (test with -webkit-box-reflect on something with a backdrop; uknown if this works now). I'm not sure it works.
Antoine Quint
Comment 13 2016-05-20 05:02:43 PDT
(In reply to comment #12) > Comment on attachment 279239 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=279239&action=review > > >> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:2456 > >> + hostLayerForSublayers()->setMask(maskCALayer); > > > > I think using primaryLayer() would be more appropriate. > > > > You also need to fix the code below to do the right thing for layer clones (test with -webkit-box-reflect on something with a backdrop; uknown if this works now). > > I'm not sure it works. It doesn't work, before or after this patch. No reflections are drawn when a clip-path is applied. I think this falls outside the scope of this particular bug.
Antoine Quint
Comment 14 2016-05-24 06:15:06 PDT
Antoine Quint
Comment 15 2016-05-24 06:49:38 PDT
Build Bot
Comment 16 2016-05-24 07:17:08 PDT
Comment on attachment 279649 [details] Patch Attachment 279649 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1374690 New failing tests: css3/filters/backdrop/backdrop-filter-with-clip-path.html
Build Bot
Comment 17 2016-05-24 07:17:13 PDT
Created attachment 279650 [details] Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 18 2016-05-24 07:18:12 PDT
Comment on attachment 279649 [details] Patch Attachment 279649 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1374688 New failing tests: css3/filters/backdrop/backdrop-filter-with-clip-path.html
Build Bot
Comment 19 2016-05-24 07:18:17 PDT
Created attachment 279651 [details] Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 20 2016-05-24 07:47:10 PDT
Comment on attachment 279649 [details] Patch Attachment 279649 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1374765 New failing tests: css3/filters/backdrop/backdrop-filter-with-clip-path.html
Build Bot
Comment 21 2016-05-24 07:47:15 PDT
Created attachment 279652 [details] Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Antoine Quint
Comment 22 2016-05-24 12:04:04 PDT
Antoine Quint
Comment 23 2016-05-24 12:37:38 PDT
Created attachment 279691 [details] Patch for landing
WebKit Commit Bot
Comment 24 2016-05-24 13:12:46 PDT
Comment on attachment 279691 [details] Patch for landing Rejecting attachment 279691 [details] from commit-queue. Number of test failures exceeded the failure limit. Full output: http://webkit-queues.webkit.org/results/1376363
WebKit Commit Bot
Comment 25 2016-05-24 13:12:50 PDT
Created attachment 279695 [details] Archive of layout-test-results from webkit-cq-01 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 26 2016-05-24 14:01:05 PDT
Comment on attachment 279691 [details] Patch for landing Clearing flags on attachment: 279691 Committed r201349: <http://trac.webkit.org/changeset/201349>
WebKit Commit Bot
Comment 27 2016-05-24 14:01:12 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 28 2016-05-24 15:02:26 PDT
Reverted r201349 for reason: This change caused compositing tests to assert on iOS simulator Committed r201357: <http://trac.webkit.org/changeset/201357>
Ryan Haddad
Comment 29 2016-05-24 15:02:53 PDT
(In reply to comment #28) > Reverted r201349 for reason: > > This change caused compositing tests to assert on iOS simulator > > Committed r201357: <http://trac.webkit.org/changeset/201357> <https://build.webkit.org/builders/Apple%20iOS%209%20Simulator%20Debug%20WK2%20%28Tests%29/builds/2138>
Antoine Quint
Comment 30 2016-05-25 01:39:19 PDT
Antoine Quint
Comment 31 2016-05-25 02:19:00 PDT
Created attachment 279750 [details] Patch for landing
WebKit Commit Bot
Comment 32 2016-05-25 02:48:24 PDT
Comment on attachment 279750 [details] Patch for landing Clearing flags on attachment: 279750 Committed r201374: <http://trac.webkit.org/changeset/201374>
WebKit Commit Bot
Comment 33 2016-05-25 02:48:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.